--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk.csproj
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk.csproj
@@ -107,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Common\" />
+    <Folder Include="DataAccess\" />
     <Folder Include="Models\" />
     <Folder Include="Resources\" />
     <Folder Include="ViewModels\" />
