--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/DoyenBiz.CitizenKiosk.csproj
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/DoyenBiz.CitizenKiosk.csproj
@@ -105,6 +105,14 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Common\" />
+    <Folder Include="DataAccess\" />
+    <Folder Include="Models\" />
+    <Folder Include="Resources\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
