changes relate to screen taking up full screen and taskbar hiding

--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/DoyenBiz.CitizenKiosk.csproj
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/DoyenBiz.CitizenKiosk.csproj
@@ -70,7 +70,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="MobileServices.xaml">
+    <Page Include="Views\MobileServices.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -82,7 +82,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MobileServices.xaml.cs">
+    <Compile Include="Views\MobileServices.xaml.cs">
       <DependentUpon>MobileServices.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
@@ -124,7 +124,6 @@
     <Folder Include="DataAccess\" />
     <Folder Include="Models\" />
     <Folder Include="ViewModels\" />
-    <Folder Include="Views\" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Images\Axis.jpeg" />
