Banking and Citzen app changes

--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk.csproj
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk.csproj
@@ -66,6 +66,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Utilities\NavigationServiceHelper.cs" />
     <Compile Include="Views\BankOptions.xaml.cs">
       <DependentUpon>BankOptions.xaml</DependentUpon>
     </Compile>
