--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/App.config
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
+  <appSettings>
+    <add key="servicesUri" value="http://183.82.103.139:8081/DoyenBizAPI/Services?service=BankingServices"/>
+  </appSettings>
 </configuration>
