Kioskid changes, amount dynamic changes

--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/App.config
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/App.config
@@ -5,5 +5,6 @@
     </startup>
   <appSettings>
     <add key="servicesUri" value="http://183.82.103.139:8081/DoyenBizAPI/Services?service=BankingServices"/>
+    <add key="kioskID" value="1011"/>
   </appSettings>
 </configuration>
