--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk.csproj
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk.csproj
@@ -190,6 +190,18 @@
   <ItemGroup>
     <Resource Include="Resources\Images\Payments.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Chart-Printing.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Cheque-02.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\ATM-02.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Touch-Screen.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
