changes after integrating all the API services

--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/App.config
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/App.config
@@ -4,7 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
   <appSettings>
-    <add key="servicesUri" value="http://183.82.103.139:8081/DoyenBizAPI/Services?service=BankingServices"/>
-    <add key="kioskID" value="1011"/>
+    <add key="servicesUri" value="http://183.82.103.139:8081/DoyenBizAPI/Services"/>
+    <add key="kioskID" value="101"/>
+    <add key="imageToSendPath" value="C:\Vikas\DoyenBiz\DoyenBiz.BankingKiosk\DoyenBiz.BankingKiosk\Resources\Images\kishanImage.jpg"/>
+    <add key="cardNumber" value="10001"/>
   </appSettings>
 </configuration>
