Live tiles and CitzenKios view model

--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/App.config
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/App.config
@@ -6,7 +6,7 @@
   <appSettings>
     <add key="servicesUri" value="http://183.82.103.139:8081/DoyenBizAPI/Services"/>
     <add key="kioskID" value="101"/>
-    <add key="imageToSendPath" value="C:\Vikas\DoyenBiz\DoyenBiz.BankingKiosk\DoyenBiz.BankingKiosk\Resources\Images\kishanImage.jpg"/>
+    <add key="imageToSendPath" value="C:\Users\prpogu\Source\Repos\DoyenBiz\DoyenBiz.BankingKiosk\DoyenBiz.BankingKiosk\Resources\Images\kishanImage.jpg"/>
     <add key="cardNumber" value="10001"/>
   </appSettings>
 </configuration>
