--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/DoyenBiz.CitizenKiosk.csproj
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/DoyenBiz.CitizenKiosk.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Converters\IsProgressedConverter.cs" />
     <Compile Include="Utilities\NavigationServiceHelper.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\MobileNumberViewModel.cs" />
     <Compile Include="ViewModels\PayCashViewModel.cs" />
     <Compile Include="ViewModels\RechargeAmountViewModel.cs" />
