--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/App.config
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
+  <appSettings>
+    <add key="servicesUri" value="http://183.82.103.139:8081/DoyenBizAPI/Services"/>
+    <add key="kioskID" value="1001"/>
+  </appSettings>
 </configuration>
